<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >
 
    <TextView android:id="@+id/height_cm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/height_cm" />
    
    <EditText android:id="@+id/input_height"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/height_cm"
        android:inputType="numberDecimal"
        android:text=""
        />
    
    <TextView android:id="@+id/weight_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_height"
        android:text="@string/weight_kg" />
    
    <EditText android:id="@+id/input_weight"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/weight_kg"
        android:inputType="numberDecimal"
        android:text=""
        />
    
    <Button android:id="@+id/about" 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/input_weight"
        android:layout_alignRight="@id/input_weight"
        android:text="@string/about"
        />
   
    
    <Button android:id="@+id/submit" 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/input_weight"
        android:layout_alignBottom="@id/about"
        android:text="@string/submit"
        />
    
    
    
    <TextView android:id="@+id/result_feet"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/submit" 
        android:text=""
        />
            
    <TextView android:id="@+id/result_pound"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/result_feet" 
        android:text=""
        />

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/result_feet"
        android:layout_centerHorizontal="true"
        android:text="@string/calc" />
    
</RelativeLayout>
